[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://ui/other/theme.tres" type="Theme" id=2]
[ext_resource path="res://ui/components/ColorPicker.tscn" type="PackedScene" id=3]
[ext_resource path="res://art/objects/ship.png" type="Texture" id=4]
[ext_resource path="res://art/objects/ship_color.png" type="Texture" id=5]
[ext_resource path="res://scenes/ShipColorpicker.gd" type="Script" id=6]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="CreateGame" type="Button" parent="."]
margin_left = 40.0
margin_top = 32.0
margin_right = 135.0
margin_bottom = 52.0
disabled = true
text = "Create Game"

[node name="JoinGame" type="Button" parent="."]
margin_left = 41.0
margin_top = 63.0
margin_right = 136.0
margin_bottom = 83.0
disabled = true
text = "Join Game"

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 177.0
margin_top = 61.0
margin_right = 417.0
margin_bottom = 85.0
text = "127.0.0.1"

[node name="NameInput" type="LineEdit" parent="."]
margin_left = 177.0
margin_top = 109.0
margin_right = 319.0
margin_bottom = 133.0
placeholder_text = "Name..."

[node name="Load" type="Label" parent="."]
visible = false
margin_left = 41.0
margin_top = 93.0
margin_right = 81.0
margin_bottom = 107.0
text = "Connecting..."

[node name="Node2D" type="Node2D" parent="."]
position = Vector2( 0, 41 )

[node name="GridContainer" type="GridContainer" parent="Node2D"]
margin_left = 180.0
margin_top = 101.0
margin_right = 236.0
margin_bottom = 157.0
columns = 3

[node name="Purple" parent="Node2D/GridContainer" instance=ExtResource( 3 )]
color = "purple"

[node name="Red" parent="Node2D/GridContainer" instance=ExtResource( 3 )]
margin_left = 20.0
margin_right = 36.0
color = "red"

[node name="Blue" parent="Node2D/GridContainer" instance=ExtResource( 3 )]
margin_left = 40.0
margin_right = 56.0

[node name="Teal" parent="Node2D/GridContainer" instance=ExtResource( 3 )]
margin_top = 20.0
margin_bottom = 36.0
color = "teal"

[node name="Green" parent="Node2D/GridContainer" instance=ExtResource( 3 )]
margin_left = 20.0
margin_top = 20.0
margin_right = 36.0
margin_bottom = 36.0
color = "green"

[node name="Yellow" parent="Node2D/GridContainer" instance=ExtResource( 3 )]
margin_left = 40.0
margin_top = 20.0
margin_right = 56.0
margin_bottom = 36.0
color = "yellow"

[node name="Beige" parent="Node2D/GridContainer" instance=ExtResource( 3 )]
margin_top = 40.0
margin_bottom = 56.0
color = "beige"

[node name="ShipColorer" type="Node2D" parent="Node2D"]
position = Vector2( 254, 102 )
scale = Vector2( 2, 2 )
script = ExtResource( 6 )

[node name="Ship" type="Sprite" parent="Node2D/ShipColorer"]
texture = ExtResource( 4 )
centered = false

[node name="Color" type="Sprite" parent="Node2D/ShipColorer"]
texture = ExtResource( 5 )
centered = false

[connection signal="pressed" from="CreateGame" to="." method="_on_CreateGame_pressed"]
[connection signal="pressed" from="JoinGame" to="." method="_on_JoinGame_pressed"]
